fix: ajustando responsividade

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_PAUTAFORMA_BASE_URL=http://ec2-18-231-88-215.sa-east-1.compute.amazonaws.com
+NEXT_PUBLIC_PAUTAFORMA_BASE_URL=http://ec2-18-231-88-215.sa-east-1.compute.amazonaws.com:3000
 NEXT_PAUTAFORMA_TIME_OUT=10000
